# DistortionPlugin

./: .gitignore  Ateş.jucer  CMakeLists.txt  README.md
DelayPlugin/: DelayPlugin.jucer
DelayPlugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
DistortionPlugin/: .gitignore.txt  DistortionPlugin.jucer
DistortionPlugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
JUCEDSPModule/: JUCEDSPModule.jucer
JUCEDSPModule/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
JUCEDSPModule/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: AteParameters.h  FifoGUIBuffer.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WaveformVisualiser.cpp  WaveformVisualiser.h  algorithm.h
atesh_module/: AteLookNFeel.cpp  AteLookNFeel.h  AteParameters.h  AteRotary.h  AteshToolBar.h  FifoGUIBuffer.cpp  FifoGUIBuffer.h  LiveConstant.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  algorithm.h  atesh_module.cpp  atesh_module.h  waveformVisualiser.cpp  waveformVisualiser.h
